nearly completed firebase sdk upgrade